fix(primitives): schema task workspace API
